# silent-storm-port

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  silent_storm.cfg  vcpkg.json
.github/workflows/: windows.yml
cmake/: CompilerWarnings.cmake  LegacyDeps.cmake  VendoredJan03.cmake
docs/: ghidra_quickstart.md  inventory.md  phase-0-completion.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-7-completion.md  upstream-patches.md
docs/patches/: fileio-dbformat.md  image-fmodsound.md  input-opendynamix.md  main-game.md  mapedit_classes.txt  p1-facade-plumbing.md  p1-facade.md  p1-input-bridge.md  p1-resolution-hud.md  p1_5_r10_reverse_engineering_leads.md  p1_5_r11_class_identified.md  p1_5_r12_wire_handlers_partial.md  p1_5_r13_wire_format_complete.md  p1_5_r15_promote_attempt_failed.md  p1_5_r16_schema_in_storage.md  p1_5_r17_probe_unsafe.md  p1_5_r23_row_data_layout.md  p1_5_r6_game_state.md  p1_5_r7_createworld_fix.md  p1_5_r8_db.md  p1_5_r9_steam_install_findings.md  p1_5_round2.md  p1_5_round3.md  p1_5_round4.md  p1_5_round5.md  p1_5_runtime.md  phase2.md  phase3.md  phase7.md  script.md
docs/superpowers/plans/: 2026-05-11-phase-0-cmake-bootstrap.md  2026-05-12-phase-1-renderer-implementation.md
docs/superpowers/specs/: 2026-05-11-silent-storm-modernization-design.md  2026-05-12-phase-1-renderer-design.md
scripts/: capture_desktop.ps1  capture_screen.ps1  capture_ss_client.ps1  gen_glyph_atlas.py  screenshot_keys.ps1  screenshot_res.ps1  screenshot_run.ps1
src/: main_stub.cpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/dbfill/: CMakeLists.txt  dbfill.cpp
src/platform/: CMakeLists.txt  sdl_event_pump.cpp  sdl_event_pump.h  sdl_input_bridge.cpp  sdl_input_bridge.h  sdl_to_dik.h  sdl_window.cpp  sdl_window.h
src/renderer/: CMakeLists.txt  bgfx_init.cpp  bgfx_init.h  d3d9_facade.cpp  d3d9_facade.h  d3d9_facade_resources.cpp  d3d9_facade_resources.h  glyph_atlas_data.h  shader_registry.cpp  shader_registry.h  state_translator.cpp  state_translator.h  video.cpp  video.h
src/save/: CMakeLists.txt  save.cpp  save.h  save_v1.fbs  save_v1_generated.h
src/shaders/: CMakeLists.txt
src/shaders/ss_diffuse_lit/: fs_ss_diffuse_lit.sc  varying.def.sc  vs_ss_diffuse_lit.sc
src/shaders/ss_diffuse_unlit/: fs_ss_diffuse_unlit.sc  varying.def.sc
src/shaders/ss_particle/: fs_ss_particle.sc  varying.def.sc  vs_ss_particle.sc
src/shaders/ss_shadow/: fs_ss_shadow.sc
src/shaders/ss_skinned/: fs_ss_skinned.sc  varying.def.sc  vs_ss_skinned.sc
src/shaders/ss_terrain/: fs_ss_terrain.sc  varying.def.sc  vs_ss_terrain.sc
src/shaders/ss_ui/: fs_ss_ui.sc  varying.def.sc
src/shaders/ss_water/: fs_ss_water.sc  varying.def.sc  vs_ss_water.sc
src/stubs/: CMakeLists.txt  ado_stub.cpp  db_record_schemas.h  db_table_storage.h  db_table_storage_stub.cpp  fmod_stub.cpp  fmod_stub.h
src/stubs/fmod_shim_headers/: fmod.h  fmod_errors.h
src/stubs/lshead/: LifeStudioHeadAPI.h  LifeStudioHeadAPIMMTS.h  lshead.def  lshead.lib
src/stubs/s3tc_shim/: s3tc.h
src/stubs/s3tc_shim/dxtlib/: dxtlib.h
tests/config/: test_config.cpp
tests/renderer/: test_state_translator.cpp
tests/save/: test_save_roundtrip.cpp
tests/smoke/: test_boot.ps1
tests/video/: test_play_video.cpp
tools/: dump_reader.cpp  gen_schemas.py
tools/bik2webm/: bik2webm.ps1
